Tried few things

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF9800</color>
     <color name="colorTitle">#212121</color>
+    <color name="colorNightMode">#000000</color>
 </resources>
 
