--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,13 +7,14 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.sfsu.csc780.chathub.ui.MainActivity">
+    tools:context="edu.sfsu.csc780.chathub.ui.MainActivity"
+    android:id="@+id/mainLayout">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/messageRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/linearLayout"/>
+        android:layout_above="@+id/linearLayout" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -30,7 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
-            android:paddingTop="20dp"/>
+            android:paddingTop="20dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -49,32 +49,32 @@
             <View
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_weight="1"/>
+                android:layout_weight="1" />
 
             <ImageButton
+                android:id="@+id/locationButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/locationButton"
-                android:background="@drawable/button_ripple"
-                android:src="@drawable/ic_my_location_black_24px"
                 android:layout_gravity="center"
-                android:padding="16dp"/>
+                android:background="@drawable/button_ripple"
+                android:padding="16dp"
+                android:src="@drawable/ic_my_location_black_24px" />
 
             <ImageButton
                 android:id="@+id/shareImageButton"
-                android:src="@drawable/ic_image_black_24px"
-                android:background="@drawable/button_ripple"
-                android:layout_gravity="center"
-                android:padding="16dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/button_ripple"
+                android:padding="16dp"
+                android:src="@drawable/ic_image_black_24px" />
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/sendButton"
-                android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:src="@drawable/ic_send_black_24"
-                android:layout_gravity="center"/>
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_send_black_24" />
         </LinearLayout>
 
     </LinearLayout>
@@ -85,5 +85,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"/>
+        android:layout_centerVertical="true" />
 </RelativeLayout>
