--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
                 android:layout_gravity="center"
                 android:background="@drawable/button_ripple"
                 android:padding="16dp"
-                android:src="@drawable/ic_mic_black_24px" />
+                android:src="?attr/micButtonStyle" />
 
             <View
                 android:layout_width="0dp"
@@ -58,7 +58,7 @@
                 android:layout_gravity="center"
                 android:background="@drawable/button_ripple"
                 android:padding="16dp"
-                android:src="@drawable/ic_my_location_black_24px" />
+                android:src="?attr/locButtonStyle" />
 
             <ImageButton
                 android:id="@+id/shareImageButton"
@@ -67,14 +67,14 @@
                 android:layout_gravity="center"
                 android:background="@drawable/button_ripple"
                 android:padding="16dp"
-                android:src="@drawable/ic_image_black_24px" />
+                android:src="?attr/imageButtonStyle" />
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/sendButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_send_black_24" />
+                android:src="?attr/sendButtonStyle" />
         </LinearLayout>
 
     </LinearLayout>
