--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,6 +52,15 @@
                 android:layout_weight="1" />
 
             <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/button_ripple"
+                android:padding="16dp"
+                android:src="?attr/canvasStyle"
+                android:id="@+id/paintButton"/>
+
+            <ImageButton
                 android:id="@+id/locationButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
