--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -16,6 +16,8 @@
         <item name="sendButtonStyle">@drawable/ic_send_black_24</item>
         <item name="backgroundButtonStyle">@drawable/ic_wallpaper_black_24px</item>
         <item name="changeModeStyle">@drawable/ic_brightness_7_black_24px</item>
+        <item name="canvasStyle">@drawable/ic_brush_black_24px</item>
+
 
     </style>
 
@@ -34,6 +36,7 @@
         <item name="sendButtonStyle">@drawable/ic_send_white_24px</item>
         <item name="backgroundButtonStyle">@drawable/ic_wallpaper_white_24px</item>
         <item name="changeModeStyle">@drawable/ic_brightness_3_white_24px</item>
+        <item name="canvasStyle">@drawable/ic_brush_white_24px</item>
 
     </style>
 
