--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#FF9800</color>
     <color name="colorTitle">#212121</color>
     <color name="colorNightMode">#000000</color>
+    <color name="paintColor">#FFFFFF</color>
 </resources>
 
