Added paint image sharing

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,8 @@
                 android:layout_gravity="center"
                 android:background="@drawable/button_ripple"
                 android:padding="16dp"
-                android:src="?attr/micButtonStyle" />
+                android:src="?attr/micButtonStyle"
+                />
 
             <View
                 android:layout_width="0dp"
