--- a/app/src/main/res/menu/paint_menu.xml
+++ b/app/src/main/res/menu/paint_menu.xml
@@ -5,6 +5,7 @@
     <item android:id="@+id/colorChooser"
         android:title="@string/choose_color"
         app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_colorize_white_24px" />
+        android:icon="@drawable/ic_colorize_white_24px"
+        android:onClick="colorDialog"/>
 
 </menu>
