--- a/app/src/main/res/layout/item_message_me.xml
+++ b/app/src/main/res/layout/item_message_me.xml
@@ -4,10 +4,10 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:id="@+id/singleMessageLayout"
+    android:id="@+id/singleMessageLayout_me"
     android:layout_marginTop="4dp"
     android:layout_marginBottom="4dp"
-    android:layout_marginEnd="30dp">
+    android:layout_marginStart="30dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,24 +15,20 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/messengerImageView"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:src="@drawable/ic_account_circle_black_36dp"/>
-
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:gravity="center_vertical"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/messageTextView"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
+                android:gravity="right|end"
                 android:textAppearance="?android:attr/textAppearanceLarge"/>
 
             <ImageView
@@ -45,14 +41,21 @@
                 tools:src="@drawable/ic_image_black_24px"
                 tools:visibility="visible"/>
 
-
             <TextView
                 android:id="@+id/messengerTextView"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
+                android:gravity="right|end"
                 android:textAppearance="?android:attr/textAppearanceSmall"/>
+
         </LinearLayout>
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/messengerImageView"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:src="@drawable/ic_account_circle_black_36dp"/>
 
     </LinearLayout>
 
