--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="colorTitle">#212121</color>
     <color name="colorNightMode">#000000</color>
     <color name="paintColor">#FFFFFF</color>
-    <color name="selectedMessage">#d6dce1</color>
+    <color name="selectedMessage">#FF6BB4F1</color>
     <color name="myMessage">#8fd791</color>
 
     <color name="color_1">#FF1CDF22</color>
