--- a/app/src/main/res/layout/item_message_me.xml
+++ b/app/src/main/res/layout/item_message_me.xml
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:id="@+id/singleMessageLL">
 
         <LinearLayout
             android:layout_width="0dp"
